--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,18 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="label_cancelar">Cancelar</string>
+    <string name="label_salvar">Salvar</string>
+    <string name="label_observacao">Observação</string>
+    <string name="label_barra">/</string>
+    <string name="label_obs">Obs:</string>
+    <string name="label_igual">=</string>
+    <string name="label_debito">Débito:</string>
+    <string name="label_credito">Crédito:</string>
+    <string name="label_manha">Manhã</string>
+    <string name="label_tarde">Tarde</string>
+    <string name="label_noite">Noite</string>
+    <string name="label_entrada">Entrada</string>
+    <string name="label_saida">Saída</string>
 </resources>
