--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="label_total">Total:</string>
     <string name="label_anos">Anos</string>
     <string name="label_hoje">Hoje</string>
+    <string name="label_dia">Dia:</string>
 </resources>
