--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="label_anos">Anos</string>
     <string name="label_hoje">Hoje</string>
     <string name="label_dia">Dia:</string>
+    <string name="label_valido">Válido</string>
 </resources>
