--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="label_hoje">Hoje</string>
     <string name="label_dia">Dia:</string>
     <string name="label_valido">Válido</string>
+    <string name="label_desfazer">Desfazer</string>
 </resources>
