--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="label_registro_salvo">Registro salvo.</string>
     <string name="label_cancelar">Cancelar</string>
     <string name="label_salvar">Salvar</string>
     <string name="label_observacao">Observação</string>
@@ -23,4 +24,11 @@
     <string name="label_dia">Dia:</string>
     <string name="label_valido">Válido</string>
     <string name="label_desfazer">Desfazer</string>
+    <string name="label_configuracoes">Configurações</string>
+    <string name="label_preferencias">Preferências</string>
+    <string name="label_relatorios">Relatórios</string>
+    <string name="label_periodo">Período</string>
+    <string name="label_pontos">Pontos</string>
+    <string name="label_bater_ponto">Bater Ponto</string>
+    <string name="label_email">E-mail</string>
 </resources>
