--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,31 +5,34 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="label_click_para_atualizar">Click para atualizar</string>
+    <string name="label_exportar_email">Exportar por e-mail</string>
     <string name="label_registro_salvo">Registro salvo.</string>
-    <string name="label_cancelar">Cancelar</string>
-    <string name="label_salvar">Salvar</string>
+    <string name="label_configuracoes">Configurações</string>
+    <string name="label_preferencias">Preferências</string>
+    <string name="label_bater_ponto">Bater Ponto</string>
     <string name="label_observacao">Observação:</string>
-    <string name="label_barra">/</string>
-    <string name="label_obs">Obs:</string>
-    <string name="label_igual">=</string>
-    <string name="label_debito">Débito:</string>
+    <string name="label_relatorios">Relatórios</string>
+    <string name="label_cancelar">Cancelar</string>
+    <string name="label_especial">Especial</string>
+    <string name="label_desfazer">Desfazer</string>
     <string name="label_credito">Crédito:</string>
+    <string name="label_entrada">Entrada</string>
+    <string name="label_periodo">Período</string>
+    <string name="label_debito">Débito:</string>
+    <string name="label_salvar">Salvar</string>
+    <string name="label_valido">Válido</string>
+    <string name="label_pontos">Pontos</string>
+    <string name="label_total">Total:</string>
+    <string name="label_email">E-mail</string>
     <string name="label_manha">Manhã</string>
     <string name="label_tarde">Tarde</string>
     <string name="label_noite">Noite</string>
-    <string name="label_entrada">Entrada</string>
     <string name="label_saida">Saída</string>
-    <string name="label_total">Total:</string>
     <string name="label_anos">Anos</string>
     <string name="label_hoje">Hoje</string>
+    <string name="label_obs">Obs:</string>
     <string name="label_dia">Dia:</string>
-    <string name="label_valido">Válido</string>
-    <string name="label_desfazer">Desfazer</string>
-    <string name="label_configuracoes">Configurações</string>
-    <string name="label_preferencias">Preferências</string>
-    <string name="label_relatorios">Relatórios</string>
-    <string name="label_periodo">Período</string>
-    <string name="label_pontos">Pontos</string>
-    <string name="label_bater_ponto">Bater Ponto</string>
-    <string name="label_email">E-mail</string>
+    <string name="label_barra">/</string>
+    <string name="label_igual">=</string>
+    <string name="label_importar">Importar</string>
 </resources>
