--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,12 +15,14 @@
     <string name="tolerancia_saida">tolerancia_saida</string>
     <string name="excesso_hora_extra_default">00:00</string>
     <string name="label_preferencias">Preferências</string>
+    <string name="label_total_lei">Contabilizado:</string>
     <string name="tolerancia_saida_default">00:10</string>
     <string name="url_importacao">url_importacao</string>
     <string name="label_bater_ponto">Bater Ponto</string>
     <string name="label_observacao">Observação:</string>
     <string name="label_relatorios">Relatórios</string>
-    <string name="label_total_lei">Total LEI:</string>
+    <string name="label_me_lembre">Me Lembre</string>
+    <string name="label_agendado">Agendado</string>
     <string name="label_cancelar">Cancelar</string>
     <string name="label_especial">Especial</string>
     <string name="label_desfazer">Desfazer</string>
@@ -34,7 +36,6 @@
     <string name="label_valido">Válido</string>
     <string name="label_pontos">Pontos</string>
     <string name="label_total">Total:</string>
-    <string name="label_email">E-mail</string>
     <string name="app_name">Períodos</string>
     <string name="label_manha">Manhã</string>
     <string name="label_tarde">Tarde</string>
@@ -44,8 +45,5 @@
     <string name="label_hoje">Hoje</string>
     <string name="label_obs">Obs:</string>
     <string name="label_dia">Dia:</string>
-    <string name="label_barra">/</string>
-    <string name="label_igual">=</string>
-    <string name="label_me_lembre">Me Lembre</string>
 
 </resources>
