--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="tolerancia_saida">tolerancia_saida</string>
     <string name="excesso_hora_extra_default">00:00</string>
     <string name="label_preferencias">Preferências</string>
+    <string name="label_sincronizado">Sincronizado</string>
     <string name="label_total_lei">Contabilizado:</string>
     <string name="tolerancia_saida_default">00:10</string>
     <string name="url_importacao">url_importacao</string>
