--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 	<string name="url_importacao_default">https://raw.githubusercontent.com/florenciofvf/AppPeriodo/master/app/src/main/res/raw/temp.txt</string>
 	<string name="label_comprimento_horario_diario">Comprimento de horário diário</string>
+	<string name="vibrar_default">100,500,200,500,300,500,400,500,500,500</string>
 	<string name="label_tolerancia_para_saida">Posso sair faltando até</string>
 	<string name="label_excesso_para_extra">Não hora extra para até</string>
 	<string name="label_click_para_atualizar">Click para atualizar</string>
@@ -31,6 +32,7 @@
 	<string name="label_entrada">Entrada</string>
 	<string name="label_periodo">Período</string>
 	<string name="label_total_lei">VAL:</string>
+	<string name="label_vibrar">Vibrar</string>
 	<string name="label_salvar">Salvar</string>
 	<string name="label_valido">Válido</string>
 	<string name="label_pontos">Pontos</string>
@@ -43,4 +45,5 @@
 	<string name="label_hoje">Hoje</string>
 	<string name="label_obs">OBS:</string>
 	<string name="label_dia">DAT:</string>
+	<string name="vibrar">vibrar</string>
 </resources>
