--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
 	<string name="label_obs">OBS:</string>
 	<string name="label_dia">DAT:</string>
 	<string name="vibrar">vibrar</string>
+	<string name="agendado">agendado</string>
 </resources>
